video-creater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-creater
spec:
  replicas: 1
  selector:
    matchLabels: { app: video-creater }
  template:
    metadata: { labels: { app: video-creater } }
    spec:
      containers:
      - name: video-creater
        image: lupca/video-creater:v0.0.3
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "2000m"
            memory: "2Gi"
