agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing-agent
spec:
  replicas: 1
  selector:
    matchLabels: { app: agent }
  template:
    metadata: { labels: { app: agent } }
    spec:
      containers:
      - name: agent
        image: lupca/tmcp-agents:v0.0.18 # Image from Docker Hub
        ports: [{ containerPort: 8000 }]
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: agent-service
spec:
  selector: { app: agent }
  ports: [{ port: 80, targetPort: 8000 }]
