aiops-logging.yaml
  # aiops-logging.yaml
  apiVersion: external-secrets.io/v1beta1
  kind: ExternalSecret
  metadata:
    name: kibana-secrets
    annotations:
      argocd.argoproj.io/sync-wave: "1" # ĐÁNH DẤU ƯU TIÊN 2 (Đợi sóng -1 xong mới chạy)
  spec:
    refreshInterval: "30s"
    secretStoreRef:
      name: vault-backend
      kind: ClusterSecretStore
    target:
      name: kibana-secrets-k8s
      creationPolicy: Owner
    data:
      - secretKey: XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY
        remoteRef:
          key: tmcp/kibana
          property: XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY
      - secretKey: XPACK_REPORTING_ENCRYPTIONKEY
        remoteRef:
          key: tmcp/kibana
          property: XPACK_REPORTING_ENCRYPTIONKEY
      - secretKey: XPACK_SECURITY_ENCRYPTIONKEY
        remoteRef:
          key: tmcp/kibana
          property: XPACK_SECURITY_ENCRYPTIONKEY
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
        ports:
        - containerPort: 9200
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: elasticsearch-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app: elasticsearch
---
# KIBANA
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.12.0
        ports:
        - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  ports:
  - port: 80
    targetPort: 5601
  selector:
    app: kibana
