ollama-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
spec:
  ports:
  - protocol: TCP
    port: 11434
    targetPort: 11434
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ollama-service
subsets:
  - addresses:
      - ip: "192.168.0.103"
    ports:
      - port: 11434
